public/css/style.css
/*--
Author: W3layouts
Author URL: http://w3layouts.com
License: Creative Commons Attribution 3.0 Unported
License URL: http://creativecommons.org/licenses/by/3.0/
--*/
html, body{
  font-size: 100%;
	background:#ffffff;
	margin: 0;
	font-family: robotu, sans-serif;
}
p,ul li,ol li{
	margin:0;
  font-size: 1.05em;
	letter-spacing: 1px;
	color: #756d6d;
	font-family: robotu, sans-serif;
}
h1,h2,h3,h4,h5,h6{
font-family: robotu, sans-serif;

	margin:0;
}
ul.main-list{
    list-style-image: url('../images/icons/square.png');
    list-style-position: inside;
}

ul.appointment-info-list {
    list-style: none;
    /*list-style-image: url('../images/icons/square.png');*/
}
ul.main-list li{
    margin-bottom: 5px;
}
ul,label{
	margin:0;
	padding:0;
}
body a:hover{
	text-decoration:none;
}
input[type="submit"],input[type="reset"],.w3ls_footer_grid_leftl,.w3ls_footer_grid_leftr h4,.w3l_footer_pos p a,.w3ls_footer_grid_leftr a,.w3layouts_header_right ul li a,.w3ls_social li a,.w3_team_grid1_pos,.w3_team_grid1_pos img{
	transition: .5s ease-in;
	-webkit-transition: .5s ease-in;
	-moz-transition: .5s ease-in;
	-o-transition: .5s ease-in;
	-ms-transition: .5s ease-in;
}
/*-- header --*/
.header_agileinfo{
	padding:0.5em 4em;
	background:#1995dc;
}
/*-- //nav-effect --*/

.w3_agileits_header_text{
	float: left;
}
.agileinfo_social_icons{
	float: right;
    margin-top: 3px;
}
.agileinfo_contact_us{
    margin-right: 22px !important;
    float: right;
    margin:  -5px 0;
    display: inline-block;
    align-content: center;
    width: 28px;
    height: 28px;
    border-radius: 50%;
    text-decoration: none;
    display: block;
    text-align: center;
}
.agileits_social_list li,.agileinfo_contact_us li,.w3_agileits_header_text li{
	display:inline-block;
}
.agileinfo_contact_us li a{
    color: #fff;
    text-align: center;
    display: inline-block;
    font-weight: bold;
}
.agileits_social_list li a{
	width: 28px;
    height: 28px;
    color: #fff;
    text-align: center;
    display: inline-block;
    font-size: 13px;
    border-radius: 50%;
	
}
.agileits_social_list li a i{
	line-height:2.4em;
}
.agileits_social_list li a:hover{
	color:#fff;
}
a.w3_agile_contact{
    background:#333333;
}
a.w3_agile_facebook{
	background:#3b5998;
}
a.agile_twitter{
	background:#1da1f2;
}
a.w3_agile_dribble{
	background:#ea4c89;
}
a.w3_agile_rss{
	background:#ffbe4a;
}
ul.top_agile_w3l_info_icons li {
    color: #fff;
    font-weight: 400;
    font-size: 20px;
    letter-spacing: 2px;
    display: inline-block;
}
ul.top_agile_w3l_info_icons li a {
 color:#fff;
}
ul.top_agile_w3l_info_icons li.second {
    margin: 0em 2em;
}
ul.top_agile_w3l_info_icons i {
    margin-right: 10px;
}
/*-- //header --*/
.navbar-default {
    background: none;
    border: none;
}
.navbar {
    margin-bottom: 0;
}
.navbar-collapse {
    padding: 0;
    box-shadow: none;
}
.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border: none;
}
.navbar-nav {
    float: right;
}
.navbar-default .navbar-brand,.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
    color: #212121;
}
/*-- agileits --*/
.logo i {
    display: inline-block;
    color: #de0f17;
}
.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
    background: none;
    color: #de0f17;
    text-decoration: line-through;
}
.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
        color: #de0f17;
    text-decoration: line-through;
}
.navbar-nav > li > a {
    font-size: 14px;
    text-transform: uppercase;
    padding:19px 18px 0;
	 font-weight:600;
		 transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -o-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -ms-transition: 0.5s all;
}
.header-bottom {
    padding: 0.7em 3em;
}
.navbar-default .navbar-nav > li > a {
        color: #111;
}
.navbar-brand {
    float: left;
    height: 67px;
    font-size: 0.9em;
    line-height: 15px;
    font-weight: 900;
    color: #111!important;
    text-transform: uppercase;
    letter-spacing: 1px;
    /*border: 3px solid #207FDC;*/
    text-align: center;
    padding: 10px 10px!important;
}
.logo p {
    display: block;
    color: #de0f17;
    line-height: 9px;
    text-align: center;
    letter-spacing: 5px;
    font-size: 10px;
}
/*-- menu --*/
.m_nav_ham{
    box-sizing: border-box;
    -webkit-transition-duration: 0.3s;
    -moz-transition-duration: 0.3s;
    -ms-transition-duration: 0.3s;
    transition-duration: 0.3s;
}
#m_nav_container {
    width: 100%;
   height: 80px;
    background-color: #0088cc;
    position: fixed;
    display: none;
    top: 0px;
    left: 0;
    z-index: 990 !important;
}
.wthree_bg{
	-webkit-transform: translate(0, -100%);
    -ms-transform: translate(0, -100%);
    transform: translate(0, -100%);
    -webkit-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}
.wthree_bg.container_open{
    -webkit-transform: translate(0, 0);
    -ms-transform: translate(0, 0);
    transform: translate(0, 0);
}
#m_nav_bar {
    width: 80%;
    margin: auto;
}
#m_nav_list {
    list-style: none;
    margin: 1.1em 0 0;
    float: right;
}
.m_nav_item {
	display: inline-block;
       margin: 0 1em;
}
.m_nav_item a {
    text-decoration: none;
    color: #7C7E7F;
    text-transform: uppercase;
    font-weight: 600;
    letter-spacing: 1px;
    -webkit-transition-duration: 0.5s;
	font-size: 0.9em;
}
.container_open {
    position: fixed !important;
    display: block;
    height: 120px;
}
#m_nav_menu {
    width: 50px;
    height: 32px;
    position: fixed;
    top: 30px;
    right: 13.4%;
    z-index: 999 !important;
    cursor: pointer;
}
.m_nav_ham {
    width: 30px;
    height: 3px;
    background: #ffc107;
    margin: 5px auto;
}
/* ... */

